--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ body #hd .hdbg {
 body #hd .hdbg ul {
   padding: 10px 0;
 }
+body #hd .hdbg ul .red {
+  color: rgb(207, 61, 51) !important;
+}
 body #main_swiper .swiper img {
   background-size: cover;
   width: 100%;
@@ -105,4 +108,39 @@ body #tapQuiz .imgbox img {
 }
 body #tapQuiz .imgbox .desc {
   background-color: rgba(240, 236, 229, 0.568627451);
+}
+body #bgImg div {
+  width: 100%;
+  height: 400px;
+  background-color: #161A30;
+  background-image: url(../img/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-attachment: fixed;
+}
+body #go-top {
+  position: fixed;
+  z-index: 9999;
+  right: 20px;
+  bottom: 130px;
+  text-align: center;
+  font-family: "moul", sans-serif;
+  font-size: 1.2rem;
+  transition: opacity 0.8;
+}
+body #go-top.none {
+  display: none !important;
+  opacity: 1;
+}
+body #go-top img {
+  width: 133px;
+}
+body #footer {
+  background-color: #161A30;
+}
+body #footer p {
+  font-size: 12px;
+}
+body #footer img {
+  width: 10rem;
 }
