--- a/css/style.scss
+++ b/css/style.scss
@@ -44,6 +44,10 @@ body {
 
             ul {
                 padding: 10px 0;
+
+                .red {
+                    color: rgb(207, 61, 51) !important;
+                }
             }
         }
     }
@@ -143,6 +147,52 @@ body {
 
 
             }
+        }
+    }
+
+    #bgImg {
+        div {
+            width: 100%;
+            height: 400px;
+            background-color: #161A30;
+            background-image: url(../img/bg.jpg);
+            background-repeat: no-repeat;
+            background-size: auto;
+            background-attachment: fixed;
+            //backGround 이미지 고정
+        }
+    }
+
+    #go-top {
+        position: fixed;
+        z-index: 9999;
+        right: 20px;
+        bottom: 130px;
+        text-align: center;
+        font-family: 'moul', sans-serif;
+        font-size: 1.2rem;
+        transition: opacity 0.8;
+
+        &.none {
+            display: none !important;
+            opacity: 1;
+        }
+
+        img {
+            width: 133px;
+
+        }
+    }
+
+    #footer {
+        background-color: #161A30;
+
+        p {
+            font-size: 12px;
+        }
+
+        img {
+            width: 10rem;
         }
     }
 }
